2009-03-21  Miguel Sofer  <msofer@users.sf.net>

	* generic/tclExecute.c:  fix both test and code for tailcall
	* tests/tailcall.test:   from within a compiled [eval] body.

	* tests/tailcall.test: slightly improved tests

2009-03-20  Don Porter  <dgp@users.sourceforge.net>

	* tests/stringObj.test:         Test stringObj-6.9 checks that
	Tcl_AppendStringsToObj() no longer crashes when operating on a
	pure unicode value.  [Bug 2597185]

	* generic/tclExecute.c (INST_CONCAT1):  Panic when appends overflow
	the max length of a Tcl value.  [Bug 2669109]

2009-03-19  Miguel Sofer  <msofer@users.sf.net>

	* generic/tcl.h:
	* generic/tclInt.h:
	* generic/tclBasic.c:
	* generic/tclExecute.c:
	* generic/tclNamesp.c (Tcl_PopCallFrame): Rewritten tailcall
	implementation, ::unsupported::atProcExit is (temporarily?)
	gone. The new approach is much simpler, and also closer to being
	correct. This commit fixes [Bug 2649975] and [Bug 2695587].

	* tests/coroutine.test:    Moved the tests to their own files, 
	* tests/tailcall.test:     removed the unsupported.test. Added
	* tests/unsupported.test:  tests for the fixed bugs.
	
2009-03-19  Donal K. Fellows  <dkf@users.sf.net>

	* doc/tailcall.n: Added documentation for tailcall command.

2009-03-18  Don Porter  <dgp@users.sourceforge.net>

	* win/tclWinFile.c (TclpObjNormalizePath):	Corrected Tcl_Obj leak.
	Thanks to Joe Mistachkin for detection and patch.  [Bug 2688184].

	* generic/tclVar.c (TclLookupSimpleVar):	Shift all calls to
	Tcl_SetErrorCode() out of TclLookupSimpleVar and onto its callers,
	where control with TCL_LEAVE_ERR_MSG flag is more easily handled.
	[Bug 2689307]

2009-03-16  Donal K. Fellows  <dkf@users.sf.net>

	* generic/tclCmdMZ.c (TryPostBody): [Bug 2688063]: Extract information
	from list before getting rid of last reference to it.

2009-03-15  Joe Mistachkin  <joe@mistachkin.com>

	* generic/tclThread.c: Modify fix for TSD leak to match Tcl 8.5